Enhance `PreferSpecificApiCheck` and `PreferVarCheck` with reflection-based type resolution